# 94-889-Data-Collection-and-ETL

./: README.md  config.yaml  data_collection_etl.py  generate_create_table_statements.sh  output.csv  pyproject.toml
